--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </div>
   <!-- Carousel End -->
 
-<div style="font-family: Arial, sans-serif; background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzKOWnoJSK6gcIiN5DI59Owjft9Ycm24YqAg&s') no-repeat center center/cover; border: 2px solid #8B4513; padding: 30px; border-radius: 10px; box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); color: #fff; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); animation: fadeIn 2s ease-in-out;">
+<div style="font-family: Arial, sans-serif; background-color: #8B4513; border: 2px solid #6A3D2B; padding: 30px; border-radius: 10px; box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2); color: #FDF5E6; animation: fadeIn 2s ease-in-out;">
   <h2 style="color: #FFD700; text-align: center; margin-bottom: 20px; animation: slideUp 1s ease-in-out;">Welcome to Cookies Tech</h2>
   <p style="font-size: 18px; line-height: 2; margin-bottom: 20px; animation: fadeIn 2s ease-in-out 0.5s;">
     <strong>Cookies Tech</strong>, founded in 2023 and headquartered in Madurai, is a dynamic technology company committed to innovation and excellence. We specialize in delivering cutting-edge solutions that empower individuals and businesses to embrace the future of technology with confidence.
@@ -145,6 +145,31 @@
     Our mission is to push the boundaries of what's possible in the tech space. With a focus on user-centric design and advanced engineering, we bring unique perspectives to every project. From mobile applications to AI-driven platforms, we strive to deliver products that resonate with modern-day challenges and opportunities.
   </p>
 </div>
+
+<!-- Why Cookies Section -->
+<section class="main_heading my-5 pt-5" style="animation: fadeIn 2s ease-in-out; background-color: #6A3D2B; color: #FDF5E6; padding: 30px; border-radius: 10px; box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);">
+  <div class="text-center" style="animation: slideDown 1s ease-in-out;">
+    <h1 class="display-4" style="color: #FFD700;">Why Choose Cookies Tech?</h1>
+    <p class="lead mt-3">Innovative Solutions, Exceptional Service, and Proven Expertise.</p>
+    <hr class="w-25 mx-auto" style="border-color: #FFD700;" />
+  </div>
+  <div class="container">
+    <div class="row my-4">
+      <div class="col-md-4" style="animation: slideInLeft 1.5s ease-in-out;">
+        <h4 style="color: #FFD700;">Innovation at Its Core</h4>
+        <p>At Cookies Tech, we push the boundaries of technology to deliver the best possible solutions for our clients.</p>
+      </div>
+      <div class="col-md-4" style="animation: fadeIn 2s ease-in-out 0.5s;">
+        <h4 style="color: #FFD700;">Customer-Centric Approach</h4>
+        <p>Your satisfaction is our priority. We work closely with you to ensure our services meet your expectations.</p>
+      </div>
+      <div class="col-md-4" style="animation: slideInRight 1.5s ease-in-out;">
+        <h4 style="color: #FFD700;">Global Reach</h4>
+        <p>With a strong network of clients and partners, we offer solutions that transcend geographical boundaries.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- CSS -->
 <style>
@@ -169,33 +194,44 @@
       opacity: 1;
     }
   }
+
+  /* Keyframes for slide-down effect */
+  @keyframes slideDown {
+    0% {
+      transform: translateY(-20px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  /* Keyframes for slide-in from left */
+  @keyframes slideInLeft {
+    0% {
+      transform: translateX(-50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  /* Keyframes for slide-in from right */
+  @keyframes slideInRight {
+    0% {
+      transform: translateX(50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
 </style>
 
-  <!-- Why Cookies Section -->
-<section class="main_heading my-5 pt-5" style="animation: fadeIn 2s ease-in-out;">
-  <div class="text-center" style="animation: slideDown 1s ease-in-out;">
-    <h1 class="display-4">Why Choose Cookies Tech?</h1>
-    <p class="lead mt-3">Innovative Solutions, Exceptional Service, and Proven Expertise.</p>
-    <hr class="w-25 mx-auto" />
-  </div>
-  <div class="container">
-    <div class="row my-4">
-      <div class="col-md-4" style="animation: slideInLeft 1.5s ease-in-out;">
-        <h4>Innovation at Its Core</h4>
-        <p>At Cookies Tech, we push the boundaries of technology to deliver the best possible solutions for our clients.</p>
-      </div>
-      <div class="col-md-4" style="animation: fadeIn 2s ease-in-out 0.5s;">
-        <h4>Customer-Centric Approach</h4>
-        <p>Your satisfaction is our priority. We work closely with you to ensure our services meet your expectations.</p>
-      </div>
-      <div class="col-md-4" style="animation: slideInRight 1.5s ease-in-out;">
-        <h4>Global Reach</h4>
-        <p>With a strong network of clients and partners, we offer solutions that transcend geographical boundaries.</p>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Why Cookies Section End -->
 
 <!-- CSS -->
 <style>
